_includes/manuals/2.2/3.6_upgrade.md

### Upgrading to Foreman {{page.version}}

#### Scope

**These instructions apply to environments not using Katello**

If you're using the [Katello]({{ site.baseurl }}plugins/katello) content management plugin scenario,
please follow their upgrade instructions (which will also upgrade Foreman).

#### Preparation

**Before updating to {{page.version}}, make sure you have successfully upgraded to {{page.previous_version}} first.**

Upgrading across more than one version is not supported, so it's required to upgrade to each
intermediate version and follow all upgrade instructions for the previous versions.

Check the list of [Supported Platforms](manuals/{{page.version}}/index.html#3.1.1SupportedPlatforms)
when planning to upgrade, as these change between releases. If your OS is no
longer supported by Foreman, migrate or upgrade the OS (if supported) using a
release of Foreman supported by both OS versions before upgrading Foreman.

#### Step 1 - Backup

It is recommended that you backup your database and modifications to Foreman
files(config/settings.yaml, unattended installations etc).  Most upgrades are
safe but it never hurts to have a backup just in case.

For more information about how to backup your instance head over to
[Backup](manuals/{{page.version}}/index.html#5.5.1Backup)

#### Step 2 - Perform the upgrade

Before proceeding, it is necessary to shutdown the Foreman instance (e.g.
`systemctl stop httpd foreman.service foreman.socket` or
`systemctl stop apache2 foreman.service foreman.socket` usually).

Now it's time to perform the actual upgrade.  This process if different
depending on how you downloaded Foreman.  You only need to perform *one* of
the following options.

##### Step 2 (A) - RHEL package (RPM) and installer setups

To upgrade an existing Foreman installation, first update with the
appropriate foreman-release package for your operating system:

    yum upgrade https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm

Clean up the yum metadata cache:

    yum clean metadata

First install or upgrade the SCL release packages to add the RHSCL repository:

    yum install centos-release-scl-rh

or:

    yum upgrade centos-release-scl-rh

Clean up the yum metadata cache once more, to ensure the new repositories are used:

    yum clean metadata

Next upgrade all Foreman packages:

    yum upgrade tfm\* ruby\* foreman\*


In order to catch all configuration changes and manage them properly you should install and run
rpmconf from the EPEL repository along with vim-enhanced (for vimdiff):

    rpmconf -a --frontend=vimdiff

You can skip to Step 3.

##### Step 2 (B) - Debian or Ubuntu package (deb) and installer setups

Upgrading from the last release to {{page.version}} has been tested on both
Debian and Ubuntu. Updating the packages will upgrade the application and
automatically migrate the database.

First edit `/etc/apt/sources.list.d/foreman.list` and change the release
number from the previous release or "stable" to `{{ page.version }}`:

    deb http://deb.theforeman.org/ buster {{ page.version }}
    deb http://deb.theforeman.org/ plugins {{ page.version }}

Next upgrade all Foreman packages:

    apt-get update
    apt-get --only-upgrade install ruby\* foreman\*

You can skip to Step 3.

##### Step 2 (C) - Downloaded release (tar.bz2)

- Uncompress the new program archive in a *new directory*.
- Copy your database settings-file `config/database.yml` into the new `config` directory.

VERY IMPORTANT: do NOT overwrite `config/settings.yml` with the old one.

##### Step 2 (D) - git checkouts only

*Please note* that there can be significant differences between stable and
development branches.  You MUST take care to select a branch and make sure you
get the correct one.

1. Go to the Foreman root directory and run the following command:

For staying on the stable branch:

- git checkout {{page.version}}-stable
- git pull

There may have been changes to the ruby gem or node module versions, to update
run the following commands:

    bundle update
    npm update

The following step is the one that could change the contents of your database.
Go to your new Foreman directory (or the git dir), then migrate and update the
contents of your database:

    foreman-rake db:migrate
    foreman-rake db:seed

You should compile i18n strings and precompile assets now:

    foreman-rake locale:pack
    foreman-rake assets:precompile RAILS_ENV=production
    foreman-rake webpack:compile RAILS_ENV=production

#### Step 3 - Post-upgrade steps

##### Step 3 (A) - Database migration and cleanup

The database should be migrated already, but you can make sure by executing the
migration script again, it should produce no errors or output:

    foreman-rake db:migrate
    foreman-rake db:seed

You should clear the cache and the existing sessions:

    foreman-rake tmp:cache:clear
    foreman-rake db:sessions:clear

##### Optional Step 3 (B) - Run foreman-installer

If you used foreman-installer to set up your existing Foreman instance we
recommend running it again after upgrading. Note that the installer can
modify config files so this may overwrite your custom changes. You can run
the installer in noop mode so you can see what would be changed.

To see what would happen

    foreman-installer --noop --dont-save-answers --verbose

You may see ERRORS such as `/Stage[main]/Foreman_proxy::Register/Foreman_smartproxy[foreman-hostname.domain]:` `Could not evaluate: Connection refused - connect(2)` due to httpd / apache2 service being stopped.  These can be safely ignored.

To apply these changes, run the installer again without options

    foreman-installer

#### Step 4 - Restart

Restart the application server (e.g. mongrel, thin, passenger).

On RPM installations, run:

    systemctl start httpd foreman.service foreman.socket

And on Debian/Ubuntu installations, run:

    systemctl start apache2 foreman.service foreman.socket

#### Optional Step 5 - Reclaim database space

After database migrations, some space can sometimes be reclaimed. It's a good idea to perform a *full* database vacuum for PostgreSQL rather than relying on the autovacuum feature to claim maximum space possible. For PostgreSQL do the following:

    foreman-maintain service stop --exclude postgresql
    su - postgres -c 'vacuumdb --full --dbname=foreman'
    foreman-maintain service start

On platforms where foreman-maintain is not available, stop all Foreman-related services except PostgreSQL.

#### Optional Step 6 - Cleanup of RPMs and repositories

On EL7, consider removing unused SCL packages:

    yum erase rh-ruby22\* rh-ruby24\* rh-ror42\* tfm-ror52\*

#### Common issues

See
[Troubleshooting](http://projects.theforeman.org/projects/foreman/wiki/Troubleshooting)
